--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nusankerta",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.2.0",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,8 +24,19 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
   },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "description": "Reimagined NFT & Social-fi",
   "main": "postcss.config.js",
   "author": "DIDI KHODRIANSYAH",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/didiansyah/nusankerta.git"
+  },
+  "keywords": [
+    "nusankerta"
+  ],
+  "bugs": {
+    "url": "https://github.com/didiansyah/nusankerta/issues"
+  },
+  "homepage": "https://github.com/didiansyah/nusankerta#readme"
 }
